@@ -56,6 +56,13 @@ indexes:
 
 - kind: QueueStatus
   properties:
+  - name: bot_id
+  - name: queue_name
+  - name: date
+    direction: desc
+
+- kind: QueueStatus
+  properties:
   - name: message
   - name: queue_name
   - name: date
